--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "server/index.js",
+        "src": "server/app.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
-        "src": "/api/(.*)",
-        "dest": "server/index.js"
+        "src": "/(.*)",
+        "dest": "server/app.js"
       }
     ]
   }
